--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-window": "^2.2.3",
     "supabase": "^2.54.11",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
